--- a/index.html
+++ b/index.html
@@ -4,107 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/src/style.css" />
     <title>AI Art Ethics</title>
-    <style>
-      body {
-        color: black;
-        display: block;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        margin: 0 auto;
-        max-width: 600px;
-        text-align: center;
-      }
-
-      .content {
-        background: linear-gradient(
-          180deg,
-          rgb(251, 216, 158) 0%,
-          rgb(255, 255, 255) 97%
-        );
-        border: 2px solid #50252b;
-        border-radius: 15px;
-        margin: 50px 50px 0px 50px;
-        padding: 10px;
-      }
-
-      h1 {
-        color: #50252b;
-        font-size: 35px;
-        font-weight: 700;
-        line-height: 40px;
-        text-transform: uppercase;
-      }
-
-      h2 {
-        font-size: 20px;
-        font-weight: 500;
-        line-height: 25px;
-      }
-
-      img {
-        border: 2px solid white;
-        margin-top: 10px;
-        outline: 1px solid white;
-        outline-offset: -15px;
-        width: 75%;
-      }
-
-      hr {
-        border-top: 1px solid #50252b50;
-        margin: 20px;
-      }
-
-      p {
-        font-size: 13px;
-        font-weight: 100;
-      }
-
-      .paragraph {
-        padding: 10px 50px 0px 50px;
-      }
-
-      .reference {
-        font-size: 10px;
-        font-weight: 100;
-        margin: 10px;
-      }
-
-      .read-more {
-        color: #be7d55;
-        font-weight: 100;
-        text-decoration: none;
-      }
-
-      .read-more:hover {
-        color: #8190a7;
-      }
-
-      button {
-        background-color: #fff;
-        border: 1px solid #50252b;
-        border-radius: 15px;
-        box-shadow: rgba(37, 39, 89, 0.08) 0px 8px 8px 0;
-        color: #50252b;
-        font-size: 16px;
-        line-height: 22px;
-        margin: 10px 0px 10px 0px;
-        padding: 16px 24px;
-        text-decoration: none;
-        transition: all 200ms ease;
-        cursor: pointer;
-      }
-
-      button:hover {
-        background: #50252b;
-        color: white;
-      }
-
-      .design-credit {
-        font-size: 10px;
-        padding: 30px;
-        text-decoration: none;
-      }
-    </style>
   </head>
   <body>
     <div class="content">
@@ -180,23 +81,6 @@
         >Emily Scott</a
       >
     </div>
-    <script>
-      function learnMore() {
-        let name = prompt("What is your name?");
-        let computer = prompt("Are you a human or AI?");
-        computer = computer.toLowerCase();
-        computer = computer.trim();
-
-        if (computer === "human") {
-          alert("Hi, " + name + "! You may learn more about this study.");
-        } else {
-          alert(
-            "Nice try, " + name + "... but you're the subject of this study."
-          );
-        }
-      }
-      let applyButton = document.querySelector("button");
-      applyButton.addEventListener("click", learnMore);
-    </script>
+    <script src="src/index.js"></script>
   </body>
 </html>
